<resources>
    <string name="app_name">welfare video</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--mian-activity-->
    <string name="mian_tab1">精选</string>
    <string name="mian_tab2">专题</string>
    <string name="mian_tab3">发现</string>
    <string name="mian_tab4">我的</string>

    <string name="back_to_exit">再按一次返回键退出程序</string>

    <string name="erro_msg">网络不见啦~~~</string>

    <string name="nav_desc">you can do it ~~~~</string>

    <string name="nav_menu_collection">我的收藏</string>
    <string name="nav_menu_download">我的下载</string>
    <string name="nav_menu_welfare">福利</string>
    <string name="nav_menu_share">分享</string>
    <string name="nav_menu_advise">建议反馈</string>
    <string name="nav_menu_setting">设置</string>
    <string name="nav_menu_about">关于</string>
    <string name="nav_menu_subject">主题</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
