<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.douliu.myplayer.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <com.douliu.myplayer.widget.NoScrollViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
    </com.douliu.myplayer.widget.NoScrollViewPager>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@mipmap/bottom_bg"
        >
        <RadioButton
            android:id="@+id/rb_tab1"
            style="@style/main_tab_style"
            android:drawableTop="@drawable/tab_02"
            android:checked="true"
            android:text="@string/mian_tab1"
            />
        <RadioButton
            android:id="@+id/rb_tab2"
            style="@style/main_tab_style"
            android:drawableTop="@drawable/tab_03"
            android:text="@string/mian_tab2"
            />
        <RadioButton
            android:id="@+id/rb_tab3"
            style="@style/main_tab_style"
            android:drawableTop="@drawable/tab_01"
            android:text="@string/mian_tab3"
            />
        <RadioButton
            android:id="@+id/rb_tab4"
            style="@style/main_tab_style"
            android:drawableTop="@drawable/tab_04"
            android:text="@string/mian_tab4"
            />

    </RadioGroup>


</LinearLayout>
